<resources>
    <string name="app_name">firebase_chat_basic</string>
    <string name="chatName">Chat</string>
    <string name="chatContact">Contact</string>
    <string name="chatSetting">Setting</string>
    <string name="fragment_chat_title">Chat</string>
    <string name="fragment_contact_title">Contact</string>
    <string name="fragment_setting_title">Setting</string>
    <string name="item_fragment_chat_title">HongTaeSun</string>
    <string name="register_FirstName">성</string>
    <string name="register_mainText">회원가입</string>
    <string name="register_email">이메일을 입력해주세요</string>
    <string name="register_password">비밀번호를 입력해주세요</string>
    <string name="register_phone_number">1234–5678</string>
    <string name="register_button">회원가입</string>
    <string name="register_SecondName">이름</string>
    <string name="chat_editText_text">채팅을 입력해주세요</string>
    <string name="chat_room_text_field_text">Message…</string>
    <string name="bottom_dialog_picture_string">나의 사진</string>
    <string name="bottom_dialog_video_string">나의 동영상</string>
    <string name="bottom_dialog_record_voice_string">음성 녹음</string>
    <string name="bottom_dialog_call_string_string">전화 하기</string>
    <string name="bottom_dialog_reservation_message_string">예약 문자</string>
    <string name="bottom_dialog_camera_string">카메라</string>
    <string name="setting_string_accept">수락</string>
    <string name="setting_string_deny">거부</string>
    <string name="setting_camera_string">카메라 권한을 허용해야 합니다.</string>


    <string-array name="splash_random_text">
        <item>사용자의 정보를 확인 중입니다..</item>
        <item>서버와의 통신을 확인 중입니다..</item>
        <item>데이터를 불러오는 중입니다..</item>
        <item>기다려주셔서 감사합니다.</item>
    </string-array>
</resources>