<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="registerViewModel"
            type="com.example.firebase_chat_basic.viewModel.RegisterViewModel"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_margin="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".35"
            tools:ignore="MissingConstraints">

            <EditText
                android:id="@+id/register_firstName"
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="50sp"
                android:layout_marginStart="2dp"
                android:elevation="4dp"
                android:background="@drawable/register_field_bg"
                android:hint="@string/register_FirstName"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:text="@={registerViewModel.getRegister_first_name}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias=".35"
                tools:ignore="Autofill,MissingConstraints,RtlSymmetry" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:elevation="0dp"
                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="RtlHardcoded">
                <EditText
                    android:id="@+id/register_SecondName"
                    android:layout_width="250dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="2dp"
                    android:elevation="4dp"
                    android:layout_height="50sp"
                    android:background="@drawable/register_field_bg"
                    android:hint="@string/register_SecondName"
                    android:inputType="textPersonName"
                    android:textAlignment="center"
                    android:text="@={registerViewModel.getRegister_second_name}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias=".35"
                    tools:ignore="Autofill,MissingConstraints,RtlSymmetry" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>


        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:elevation="4dp"
            android:layout_margin="20dp"
            android:background="@drawable/register_field_bg"
            android:hint="@string/register_email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:text="@={registerViewModel.getRegister_email}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".5"
            tools:ignore="Autofill,MissingConstraints,RtlSymmetry" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:elevation="4dp"
            android:layout_margin="20dp"
            android:background="@drawable/register_field_bg"
            android:hint="@string/register_password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:text="@={registerViewModel.getRegister_password}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".6"
            tools:ignore="Autofill,MissingConstraints,RtlSymmetry" />

        <EditText
            android:id="@+id/register_phone_number"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:elevation="4dp"
            android:layout_margin="20dp"
            android:background="@drawable/register_field_bg"
            android:hint="@string/register_phone_number"
            android:inputType="number"
            android:paddingStart="10dp"
            android:text="@={registerViewModel.getRegister_phone_number}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.7"
            tools:ignore="Autofill,MissingConstraints,RtlSymmetry,TextFields" />


        <TextView
            android:textSize="20sp"
            android:text="@string/register_mainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            app:layout_constraintVertical_bias=".2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/register_button_bg"
            android:onClick="@{() -> registerViewModel.registerButton()}"
            android:text="@string/register_button"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.88" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_margin="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias=".96"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/informationText"
                android:text="이용약관"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias=".88"
                tools:ignore="HardcodedText" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="RtlHardcoded">
                <TextView
                    android:id="@+id/otherLoginText"
                    android:text="다른 방법으로 로그인"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintVertical_bias=".88"
                    tools:ignore="HardcodedText" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>